<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_menu"
            android:title="@string/nav_menu"
            android:icon="@drawable/ic_menu"/>

        <item android:id="@+id/nav_staff_management"
            android:title="@string/nav_staff_management"
            android:icon="@drawable/ic_management_staff"/>

    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_my_profile"/>

            <item android:id="@+id/nav_change_password"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_change_password"/>
            <item android:id="@+id/nav_add_staff"
                android:title="@string/nav_add_staff"
                android:icon="@drawable/ic_add_user"/>
        </menu>
    </item>
</menu>