<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".AddUserActivity">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:text="@string/add_staff"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/edt_staff_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="fullname"
        android:ems="10"
        android:hint="@string/staff_name"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#8D6E63"/>

    <EditText
        android:id="@+id/edt_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/staff_date_of_birth"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#8D6E63" />
    <EditText
        android:id="@+id/edt_staff_cccd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/staff_cccd"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#8D6E63"/>
    <EditText
    android:id="@+id/edt_staff_address"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="username"
    android:ems="10"
    android:hint="@string/staff_address"
    android:inputType="text"
    android:padding="20dp"
    android:textColorHint="#8D6E63"/>
    <EditText
        android:id="@+id/edt_staff_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/staff_phone_number"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#8D6E63"/>

    <EditText
        android:id="@+id/edt_staff_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/input_username"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#8D6E63"/>
    <EditText
        android:id="@+id/edt_staff_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#8D6E63"/>


    <Button
        android:id="@+id/btn_add_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/add_staff_btn"
        />
</LinearLayout>