<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:text="Chi tiết sản phẩm"
                    android:textSize="32sp"
                    android:paddingBottom="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="20sp"
                    android:layout_marginTop="3dp"/>
                <EditText
                    android:id="@+id/edt_product_name_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/product_name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColorHint="#8D6E63"
                    android:textIsSelectable="true"
                    android:focusable="false"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_type"
                    android:textSize="20sp"
                    android:layout_marginTop="3dp"/>
                <EditText
                    android:id="@+id/edt_product_type_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/product_type"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColorHint="#8D6E63"
                    android:textIsSelectable="true"
                    android:focusable="false"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_quantity"
                    android:textSize="20sp"
                    android:layout_marginTop="3dp"/>
                <EditText
                    android:id="@+id/edt_product_quantity_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/product_quantity"
                    android:inputType="number"
                    android:padding="20dp"
                    android:textColorHint="#8D6E63"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price"
                    android:textSize="20sp"
                    android:layout_marginTop="3dp"/>
                <EditText
                    android:id="@+id/edt_product_price_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal"
                    android:padding="20dp"
                    android:textColorHint="#8D6E63"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_img"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"/>
                <ImageView
                    android:id="@+id/iv_show_img_detail"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"/>


                <Button
                    android:id="@+id/btn_edit_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/design_default_color_primary"
                    android:text="Sửa sản phẩm"
                    />
        </LinearLayout>
</ScrollView>